fixed spacing styling issues with appshell

--- a/src/index.css
+++ b/src/index.css
@@ -37,12 +37,14 @@ body {
 	margin: 0 0;
 	box-sizing: border-box !important;
 	width: 100%;
+	height: 100vh;
 }
 
 .page {
-	display: block;
-	width: 100%;
-	height: calc(100vh - 65px);
+	height: calc(100vh - 60px);
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .center {
@@ -63,4 +65,10 @@ body {
 
 .lg-text {
 	color: #bbbaba;
+}
+
+@media screen and (max-width: 768px) {
+	.page {
+		height: calc(100vh - 48px);
+	}
 }
